# simple-axum-api

./: Cargo.toml  README.md
src/: handler.rs  main.rs  model.rs  response.rs  route.rs
